# uipath-test-governance

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/decisions/: ADR-001-agent-architecture.md
src/agents/: coverage_reporter.py  escalation.py  flaky_detector.py  impact_analyzer.py  orchestrator.py
src/config/: settings.py
src/models/: database.py  interfaces.py
src/orchestrator/: pipeline.py
src/uipath/: test_cloud_client.py
tests/unit/: test_flaky_detector.py  test_impact_analyzer.py
